--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //WorkManager
     implementation "androidx.work:work-runtime-ktx:2.3.4"
+    //Material design
+    implementation "com.android.support:design:27.1.0"
+
 
 
 }
